--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix-svg">
         <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
+    </header>
+    <main class="main">
         <div class="main__container-new-task">
             <label for="new-task" class="main__label">Add Item</label>
             <div class="main__task-line-wrapper">
@@ -18,7 +18,7 @@
                 <button class="main__btn-add-task btn">Add</button>
             </div>
         </div>
-        <label class="main__label">Todo</label>
+        <h2 class="main__label">Todo</h2>
         <ul class="list-tasks">
             <li class="list-tasks__task">
                 <input class="list-tasks__input-checkbox" type="checkbox">
@@ -39,7 +39,7 @@
                 </button>
             </li>
         </ul>
-        <label class="main__label">Completed</label>
+        <h2 class="main__label">Completed</h2>
         <ul class="list-tasks completed-tasks">
             <li class="list-tasks__task">
                 <input class="list-tasks__input-checkbox" type="checkbox" checked>
@@ -51,7 +51,7 @@
                 </button>
             </li>
         </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
