fix(basic-3.6, basic-3.5): added spaces after the property name and indents in blocks

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header section">
         <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix-svg">
         <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main">
+    <main class="main section">
         <div class="main__container-new-task">
-            <label for="new-task" class="main__label">Add Item</label>
+            <h2 class="main__section-name">Add Item</h2>
             <div class="main__task-line-wrapper">
-                <input class="main__new-task input-task" id="new-task" type="text">
+                <input class="main__new-task input-task" type="text">
                 <button class="main__btn-add-task btn">Add</button>
             </div>
         </div>
-        <h2 class="main__label">Todo</h2>
+        <h2 class="main__section-name">Todo</h2>
         <ul class="list-tasks">
             <li class="list-tasks__task">
                 <input class="list-tasks__input-checkbox" type="checkbox">
@@ -39,7 +39,7 @@
                 </button>
             </li>
         </ul>
-        <h2 class="main__label">Completed</h2>
+        <h2 class="main__section-name">Completed</h2>
         <ul class="list-tasks completed-tasks">
             <li class="list-tasks__task">
                 <input class="list-tasks__input-checkbox" type="checkbox" checked>
