fix(basic-6): added folder assets

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="header section">
-        <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix-svg">
+        <img class="header__img" src="./assets/eisenhower-matrix.jpg" alt="eisenhower-matrix-svg">
         <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main section">
@@ -26,7 +26,7 @@
                 <input class="input-task" type="text">
                 <button class="btn-edit-task btn">Edit</button>
                 <button class="btn-delete-task btn">
-                    <img class="btn__cross-icon" src="./remove.svg" alt="cross-icon">
+                    <img class="btn__cross-icon" src="./assets/remove.svg" alt="cross-icon">
                 </button>
             </li>
             <li class="list-tasks__task list-tasks__task_edit-mode">
@@ -35,7 +35,7 @@
                 <input class="input-task" type="text" value="Go Shopping">
                 <button class="btn-edit-task btn">Save</button>
                 <button class="btn-delete-task btn">
-                    <img class="btn__cross-icon" src="./remove.svg" alt="cross-icon">
+                    <img class="btn__cross-icon" src="./assets/remove.svg" alt="cross-icon">
                 </button>
             </li>
         </ul>
@@ -47,7 +47,7 @@
                 <input class="input-task" type="text">
                 <button class="btn-edit-task btn">Edit</button>
                 <button class="btn-delete-task btn">
-                    <img class="btn__cross-icon" src="./remove.svg" alt="cross-icon">
+                    <img class="btn__cross-icon" src="./assets/remove.svg" alt="cross-icon">
                 </button>
             </li>
         </ul>
